--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using my_first_pr
-@namespace my_first_pr.Pages
+﻿@using my_first_pr.Blazor
+@namespace my_first_pr.Blazor.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
